updated plugins API documentation

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -62,9 +62,52 @@ This is a complete list of available classes:
 - [`Piwik\Plugin\API`](Piwik/Plugin/API.md) &mdash; The base class of all API singletons.
 - [`Piwik\Plugin\Archiver`](Piwik/Plugin/Archiver.md) &mdash; The base class that should be extended by plugins that archive their own metrics.
 - [`Piwik\Plugin\Controller`](Piwik/Plugin/Controller.md) &mdash; Base class of all plugin Controllers.
-- [`Piwik\Plugin\ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md) &mdash; Parent class of all plugins Controllers with admin functions
+- [`Piwik\Plugin\ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md) &mdash; Base class of plugin controllers that provide administrative functionality.
 - [`Piwik\Plugin\ViewDataTable`](Piwik/Plugin/ViewDataTable.md) &mdash; This class is used to load (from the API) and customize the output of a given DataTable.
 - [`Piwik\Plugin\Visualization`](Piwik/Plugin/Visualization.md) &mdash; Base class for all DataTable visualizations.
+- [`Piwik\Plugins\API\Controller`](Piwik/Plugins/API/Controller.md)
+- [`Piwik\Plugins\Actions\Controller`](Piwik/Plugins/Actions/Controller.md) &mdash; Actions controller
+- [`Piwik\Plugins\Annotations\Controller`](Piwik/Plugins/Annotations/Controller.md) &mdash; Controller for the Annotations plugin.
+- [`Piwik\Plugins\CoreAdminHome\Controller`](Piwik/Plugins/CoreAdminHome/Controller.md)
+- [`Piwik\Plugins\CoreHome\Controller`](Piwik/Plugins/CoreHome/Controller.md)
+- [`Piwik\Plugins\CorePluginsAdmin\Controller`](Piwik/Plugins/CorePluginsAdmin/Controller.md)
+- [`Piwik\Plugins\CoreUpdater\Controller`](Piwik/Plugins/CoreUpdater/Controller.md)
+- [`Piwik\Plugins\CustomVariables\Controller`](Piwik/Plugins/CustomVariables/Controller.md)
+- [`Piwik\Plugins\DBStats\Controller`](Piwik/Plugins/DBStats/Controller.md)
+- [`Piwik\Plugins\Dashboard\Controller`](Piwik/Plugins/Dashboard/Controller.md) &mdash; Dashboard Controller
+- [`Piwik\Plugins\DevicesDetection\Controller`](Piwik/Plugins/DevicesDetection/Controller.md)
+- [`Piwik\Plugins\ExamplePluginTemplate\Controller`](Piwik/Plugins/ExamplePluginTemplate/Controller.md)
+- [`Piwik\Plugins\ExamplePlugin\Controller`](Piwik/Plugins/ExamplePlugin/Controller.md)
+- [`Piwik\Plugins\ExampleRssWidget\Controller`](Piwik/Plugins/ExampleRssWidget/Controller.md)
+- [`Piwik\Plugins\ExampleUI\Controller`](Piwik/Plugins/ExampleUI/Controller.md)
+- [`Piwik\Plugins\Feedback\Controller`](Piwik/Plugins/Feedback/Controller.md)
+- [`Piwik\Plugins\Goals\Controller`](Piwik/Plugins/Goals/Controller.md)
+- [`Piwik\Plugins\ImageGraph\Controller`](Piwik/Plugins/ImageGraph/Controller.md)
+- [`Piwik\Plugins\Installation\Controller`](Piwik/Plugins/Installation/Controller.md) &mdash; Installation controller
+- [`Piwik\Plugins\LanguagesManager\Controller`](Piwik/Plugins/LanguagesManager/Controller.md)
+- [`Piwik\Plugins\Live\Controller`](Piwik/Plugins/Live/Controller.md)
+- [`Piwik\Plugins\Login\Controller`](Piwik/Plugins/Login/Controller.md) &mdash; Login controller
+- [`Piwik\Plugins\MobileMessaging\Controller`](Piwik/Plugins/MobileMessaging/Controller.md)
+- [`Piwik\Plugins\MultiSites\Controller`](Piwik/Plugins/MultiSites/Controller.md)
+- [`Piwik\Plugins\Overlay\Controller`](Piwik/Plugins/Overlay/Controller.md)
+- [`Piwik\Plugins\PrivacyManager\Controller`](Piwik/Plugins/PrivacyManager/Controller.md)
+- [`Piwik\Plugins\Provider\Controller`](Piwik/Plugins/Provider/Controller.md)
+- [`Piwik\Plugins\Proxy\Controller`](Piwik/Plugins/Proxy/Controller.md) &mdash; Controller for proxy services
+- [`Piwik\Plugins\Referrers\Controller`](Piwik/Plugins/Referrers/Controller.md)
+- [`Piwik\Plugins\SEO\Controller`](Piwik/Plugins/SEO/Controller.md)
+- [`Piwik\Plugins\ScheduledReports\Controller`](Piwik/Plugins/ScheduledReports/Controller.md)
+- [`Piwik\Plugins\SegmentEditor\Controller`](Piwik/Plugins/SegmentEditor/Controller.md)
+- [`Piwik\Plugins\SitesManager\Controller`](Piwik/Plugins/SitesManager/Controller.md)
+- [`Piwik\Plugins\Transitions\Controller`](Piwik/Plugins/Transitions/Controller.md)
+- [`Piwik\Plugins\UserCountryMap\Controller`](Piwik/Plugins/UserCountryMap/Controller.md)
+- [`Piwik\Plugins\UserCountry\Controller`](Piwik/Plugins/UserCountry/Controller.md)
+- [`Piwik\Plugins\UserSettings\Controller`](Piwik/Plugins/UserSettings/Controller.md)
+- [`Piwik\Plugins\UsersManager\Controller`](Piwik/Plugins/UsersManager/Controller.md)
+- [`Piwik\Plugins\VisitFrequency\Controller`](Piwik/Plugins/VisitFrequency/Controller.md)
+- [`Piwik\Plugins\VisitTime\Controller`](Piwik/Plugins/VisitTime/Controller.md)
+- [`Piwik\Plugins\VisitorInterest\Controller`](Piwik/Plugins/VisitorInterest/Controller.md)
+- [`Piwik\Plugins\VisitsSummary\Controller`](Piwik/Plugins/VisitsSummary/Controller.md)
+- [`Piwik\Plugins\Widgetize\Controller`](Piwik/Plugins/Widgetize/Controller.md)
 - [`Piwik\RankingQuery`](Piwik/RankingQuery.md) &mdash; The ranking query class wraps an arbitrary SQL query with more SQL that limits the number of results while grouping the rest to &quot;Others&quot; and allows for some more fancy things that can be configured via method calls of this class.
 - [`Piwik\ScheduledTask`](Piwik/ScheduledTask.md) &mdash; ScheduledTask is used by the task scheduler and by plugins to configure runnable tasks.
 - [`Piwik\ScheduledTime\Daily`](Piwik/ScheduledTime/Daily.md) &mdash; Daily class is used to schedule tasks every day.
