--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -121,6 +121,49 @@ Index
 - [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
 - [`$config()`](Piwik/Plugin/ViewDataTable.md#$config) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`canDisplayViewDataTable()`](Piwik/Plugin/ViewDataTable.md#canDisplayViewDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`Controller`](Piwik/Plugins/API/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\API`](Piwik/Plugins/API)
+- [`Controller`](Piwik/Plugins/Actions/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Actions`](Piwik/Plugins/Actions)
+- [`Controller`](Piwik/Plugins/Annotations/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Annotations`](Piwik/Plugins/Annotations)
+- [`Controller`](Piwik/Plugins/CoreAdminHome/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CoreAdminHome`](Piwik/Plugins/CoreAdminHome)
+- [`Controller`](Piwik/Plugins/CoreHome/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CoreHome`](Piwik/Plugins/CoreHome)
+- [`Controller`](Piwik/Plugins/CorePluginsAdmin/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CorePluginsAdmin`](Piwik/Plugins/CorePluginsAdmin)
+- [`Controller`](Piwik/Plugins/CoreUpdater/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CoreUpdater`](Piwik/Plugins/CoreUpdater)
+- [`Controller`](Piwik/Plugins/CustomVariables/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CustomVariables`](Piwik/Plugins/CustomVariables)
+- [`Controller`](Piwik/Plugins/DBStats/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\DBStats`](Piwik/Plugins/DBStats)
+- [`Controller`](Piwik/Plugins/Dashboard/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Dashboard`](Piwik/Plugins/Dashboard)
+- [`Controller`](Piwik/Plugins/DevicesDetection/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\DevicesDetection`](Piwik/Plugins/DevicesDetection)
+- [`Controller`](Piwik/Plugins/ExamplePluginTemplate/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\ExamplePluginTemplate`](Piwik/Plugins/ExamplePluginTemplate)
+- [`Controller`](Piwik/Plugins/ExamplePlugin/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\ExamplePlugin`](Piwik/Plugins/ExamplePlugin)
+- [`Controller`](Piwik/Plugins/ExampleRssWidget/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\ExampleRssWidget`](Piwik/Plugins/ExampleRssWidget)
+- [`Controller`](Piwik/Plugins/ExampleUI/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\ExampleUI`](Piwik/Plugins/ExampleUI)
+- [`Controller`](Piwik/Plugins/Feedback/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Feedback`](Piwik/Plugins/Feedback)
+- [`Controller`](Piwik/Plugins/Goals/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Goals`](Piwik/Plugins/Goals)
+- [`Controller`](Piwik/Plugins/ImageGraph/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\ImageGraph`](Piwik/Plugins/ImageGraph)
+- [`Controller`](Piwik/Plugins/Installation/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Installation`](Piwik/Plugins/Installation)
+- [`Controller`](Piwik/Plugins/LanguagesManager/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\LanguagesManager`](Piwik/Plugins/LanguagesManager)
+- [`Controller`](Piwik/Plugins/Live/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Live`](Piwik/Plugins/Live)
+- [`Controller`](Piwik/Plugins/Login/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Login`](Piwik/Plugins/Login)
+- [`Controller`](Piwik/Plugins/MobileMessaging/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\MobileMessaging`](Piwik/Plugins/MobileMessaging)
+- [`Controller`](Piwik/Plugins/MultiSites/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\MultiSites`](Piwik/Plugins/MultiSites)
+- [`Controller`](Piwik/Plugins/Overlay/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Overlay`](Piwik/Plugins/Overlay)
+- [`Controller`](Piwik/Plugins/PrivacyManager/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\PrivacyManager`](Piwik/Plugins/PrivacyManager)
+- [`Controller`](Piwik/Plugins/Provider/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Provider`](Piwik/Plugins/Provider)
+- [`Controller`](Piwik/Plugins/Proxy/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Proxy`](Piwik/Plugins/Proxy)
+- [`Controller`](Piwik/Plugins/Referrers/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Referrers`](Piwik/Plugins/Referrers)
+- [`Controller`](Piwik/Plugins/SEO/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\SEO`](Piwik/Plugins/SEO)
+- [`Controller`](Piwik/Plugins/ScheduledReports/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\ScheduledReports`](Piwik/Plugins/ScheduledReports)
+- [`Controller`](Piwik/Plugins/SegmentEditor/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\SegmentEditor`](Piwik/Plugins/SegmentEditor)
+- [`Controller`](Piwik/Plugins/SitesManager/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\SitesManager`](Piwik/Plugins/SitesManager)
+- [`Controller`](Piwik/Plugins/Transitions/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Transitions`](Piwik/Plugins/Transitions)
+- [`Controller`](Piwik/Plugins/UserCountryMap/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\UserCountryMap`](Piwik/Plugins/UserCountryMap)
+- [`Controller`](Piwik/Plugins/UserCountry/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\UserCountry`](Piwik/Plugins/UserCountry)
+- [`Controller`](Piwik/Plugins/UserSettings/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\UserSettings`](Piwik/Plugins/UserSettings)
+- [`Controller`](Piwik/Plugins/UsersManager/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\UsersManager`](Piwik/Plugins/UsersManager)
+- [`Controller`](Piwik/Plugins/VisitFrequency/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\VisitFrequency`](Piwik/Plugins/VisitFrequency)
+- [`Controller`](Piwik/Plugins/VisitTime/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\VisitTime`](Piwik/Plugins/VisitTime)
+- [`Controller`](Piwik/Plugins/VisitorInterest/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\VisitorInterest`](Piwik/Plugins/VisitorInterest)
+- [`Controller`](Piwik/Plugins/VisitsSummary/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\VisitsSummary`](Piwik/Plugins/VisitsSummary)
+- [`Controller`](Piwik/Plugins/Widgetize/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Widgetize`](Piwik/Plugins/Widgetize)
 - [`$className()`](Piwik/ScheduledTask.md#$className) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`clearCache()`](Piwik/Site.md#clearCache) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`clearCompiledTemplates()`](Piwik/View.md#clearCompiledTemplates) &mdash; _Method in class_ [`View`](Piwik/View.md)
@@ -326,6 +369,7 @@ Index
 - [`getPrettyString()`](Piwik/Period/Range.md#getPrettyString) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`getDateEnd()`](Piwik/Period/Range.md#getDateEnd) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`getLastDate()`](Piwik/Period/Range.md#getLastDate) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
+- [`getRelativeToEndDate()`](Piwik/Period/Range.md#getRelativeToEndDate) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`getCurrentUserEmail()`](Piwik/Piwik.md#getCurrentUserEmail) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`getSuperUserLogin()`](Piwik/Piwik.md#getSuperUserLogin) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`getSuperUserEmail()`](Piwik/Piwik.md#getSuperUserEmail) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
@@ -337,9 +381,7 @@ Index
 - [`getPluginName()`](Piwik/Plugin.md#getPluginName) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`getPluginNameFromBacktrace()`](Piwik/Plugin.md#getPluginNameFromBacktrace) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`getDefaultAction()`](Piwik/Plugin/Controller.md#getDefaultAction) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
-- [`getDateRangeRelativeToEndDate()`](Piwik/Plugin/Controller.md#getDateRangeRelativeToEndDate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`getCalendarPrettyDate()`](Piwik/Plugin/Controller.md#getCalendarPrettyDate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
-- [`getPrettyDate()`](Piwik/Plugin/Controller.md#getPrettyDate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`getDefaultConfig()`](Piwik/Plugin/ViewDataTable.md#getDefaultConfig) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`getDefaultRequestConfig()`](Piwik/Plugin/ViewDataTable.md#getDefaultRequestConfig) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`getViewDataTableId()`](Piwik/Plugin/ViewDataTable.md#getViewDataTableId) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
