updated plugins API documentation

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -63,6 +63,7 @@ This is a complete list of available classes:
 - [`Piwik\Plugin\Archiver`](Piwik/Plugin/Archiver.md) &mdash; The base class that should be extended by plugins that archive their own metrics.
 - [`Piwik\Plugin\Controller`](Piwik/Plugin/Controller.md) &mdash; Base class of all plugin Controllers.
 - [`Piwik\Plugin\ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md) &mdash; Base class of plugin controllers that provide administrative functionality.
+- [`Piwik\Plugin\Manager`](Piwik/Plugin/Manager.md) &mdash; The singleton that manages plugin loading/unloading and installation/uninstallation.
 - [`Piwik\Plugin\ViewDataTable`](Piwik/Plugin/ViewDataTable.md) &mdash; This class is used to load (from the API) and customize the output of a given DataTable.
 - [`Piwik\Plugin\Visualization`](Piwik/Plugin/Visualization.md) &mdash; Base class for all DataTable visualizations.
 - [`Piwik\Plugins\API\Controller`](Piwik/Plugins/API/Controller.md)
@@ -122,7 +123,6 @@ This is a complete list of available classes:
 - [`Piwik\Singleton`](Piwik/Singleton.md) &mdash; The singleton class restricts the instantiation of a class to one object only.
 - [`Piwik\Site`](Piwik/Site.md) &mdash; Provides access to individual site data (such as name, URL, etc.).
 - [`Piwik\TaskScheduler`](Piwik/TaskScheduler.md) &mdash; Manages scheduled task execution.
-- [`Piwik\Tracker\Visit`](Piwik/Tracker/Visit.md) &mdash; Class used to handle a Visit.
 - [`Piwik\Url`](Piwik/Url.md) &mdash; Provides URL related helper methods.
 - [`Piwik\UrlHelper`](Piwik/UrlHelper.md) &mdash; Contains less commonly needed URL helper methods.
 - [`Piwik\Version`](Piwik/Version.md) &mdash; Piwik version information.
