--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -382,6 +382,9 @@ Index
 - [`getPluginNameFromBacktrace()`](Piwik/Plugin.md#getPluginNameFromBacktrace) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`getDefaultAction()`](Piwik/Plugin/Controller.md#getDefaultAction) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`getCalendarPrettyDate()`](Piwik/Plugin/Controller.md#getCalendarPrettyDate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
+- [`getThemeEnabled()`](Piwik/Plugin/Manager.md#getThemeEnabled) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
+- [`getInstalledPluginsName()`](Piwik/Plugin/Manager.md#getInstalledPluginsName) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
+- [`getMissingPlugins()`](Piwik/Plugin/Manager.md#getMissingPlugins) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
 - [`getDefaultConfig()`](Piwik/Plugin/ViewDataTable.md#getDefaultConfig) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`getDefaultRequestConfig()`](Piwik/Plugin/ViewDataTable.md#getDefaultRequestConfig) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`getViewDataTableId()`](Piwik/Plugin/ViewDataTable.md#getViewDataTableId) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
@@ -425,7 +428,6 @@ Index
 - [`getExcludedIpsFor()`](Piwik/Site.md#getExcludedIpsFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`getExcludedQueryParametersFor()`](Piwik/Site.md#getExcludedQueryParametersFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`getScheduledTimeForMethod()`](Piwik/TaskScheduler.md#getScheduledTimeForMethod) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
-- [`generateUniqueVisitorId()`](Piwik/Tracker/Visit.md#generateUniqueVisitorId) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
 - [`getCurrentUrl()`](Piwik/Url.md#getCurrentUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getCurrentUrlWithoutQueryString()`](Piwik/Url.md#getCurrentUrlWithoutQueryString) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getCurrentUrlWithoutFileName()`](Piwik/Url.md#getCurrentUrlWithoutFileName) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
@@ -450,7 +452,6 @@ Index
 
 - [`Http`](Piwik/Http.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`Hourly`](Piwik/ScheduledTime/Hourly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
-- [`handle()`](Piwik/Tracker/Visit.md#handle) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
 
 ### I
 
@@ -484,6 +485,8 @@ Index
 - [`isValidEmailString()`](Piwik/Piwik.md#isValidEmailString) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`install()`](Piwik/Plugin.md#install) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`isTheme()`](Piwik/Plugin.md#isTheme) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`isPluginActivated()`](Piwik/Plugin/Manager.md#isPluginActivated) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
+- [`isPluginLoaded()`](Piwik/Plugin/Manager.md#isPluginLoaded) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
 - [`isViewDataTableId()`](Piwik/Plugin/ViewDataTable.md#isViewDataTableId) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`isRequestingSingleDataTable()`](Piwik/Plugin/ViewDataTable.md#isRequestingSingleDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`isEmpty()`](Piwik/Segment.md#isEmpty) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
@@ -501,7 +504,6 @@ Index
 - [`isEcommerceEnabledFor()`](Piwik/Site.md#isEcommerceEnabledFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`isSiteSearchEnabledFor()`](Piwik/Site.md#isSiteSearchEnabledFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`isTaskBeingExecuted()`](Piwik/TaskScheduler.md#isTaskBeingExecuted) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
-- [`isHostKnownAliasHost()`](Piwik/Tracker/Visit.md#isHostKnownAliasHost) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
 - [`isLocalUrl()`](Piwik/Url.md#isLocalUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`isDefined()`](Piwik/WidgetsList.md#isDefined) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)
 
@@ -541,6 +543,7 @@ Index
 - [`$mappingFromNameToId()`](Piwik/Metrics.md#$mappingFromNameToId) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
 - [`MetricsFormatter`](Piwik/MetricsFormatter.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`makePeriodFromQueryParams()`](Piwik/Period.md#makePeriodFromQueryParams) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
+- [`Manager`](Piwik/Plugin/Manager.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
 - [`$methodName()`](Piwik/ScheduledTask.md#$methodName) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`$methodParameter()`](Piwik/ScheduledTask.md#$methodParameter) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`Monthly`](Piwik/ScheduledTime/Monthly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
@@ -601,6 +604,7 @@ Index
 - [`Range`](Piwik/Period/Range.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
 - [`redirectToModule()`](Piwik/Piwik.md#redirectToModule) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`redirectToIndex()`](Piwik/Plugin/Controller.md#redirectToIndex) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
+- [`returnLoadedPluginsInfo()`](Piwik/Plugin/Manager.md#returnLoadedPluginsInfo) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
 - [`$requestConfig()`](Piwik/Plugin/ViewDataTable.md#$requestConfig) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`render()`](Piwik/Plugin/ViewDataTable.md#render) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`RankingQuery`](Piwik/RankingQuery.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
@@ -682,7 +686,6 @@ Index
 - [`Site`](Piwik/Site.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`setSites()`](Piwik/Site.md#setSites) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`setSitesFromArray()`](Piwik/Site.md#setSitesFromArray) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
-- [`setRequest()`](Piwik/Tracker/Visit.md#setRequest) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
 - [`setContentType()`](Piwik/View.md#setContentType) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`setXFrameOptions()`](Piwik/View.md#setXFrameOptions) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`singleReport()`](Piwik/View.md#singleReport) &mdash; _Method in class_ [`View`](Piwik/View.md)
@@ -715,7 +718,6 @@ Index
 - [`verifyNonce()`](Piwik/Nonce.md#verifyNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
 - [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
 - [`Visualization`](Piwik/Plugin/Visualization.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
-- [`Visit`](Piwik/Tracker/Visit.md) &mdash; _Class in namespace_ [`Piwik\Tracker`](Piwik/Tracker)
 - [`Version`](Piwik/Version.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`View`](Piwik/View.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 
