updated plugins API documentation

--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -408,6 +408,8 @@ Index
 - [`getSelectQuery()`](Piwik/Segment.md#getSelectQuery) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
 - [`getKnownSegmentsToArchive()`](Piwik/SettingsPiwik.md#getKnownSegmentsToArchive) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`getPiwikUrl()`](Piwik/SettingsPiwik.md#getPiwikUrl) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
+- [`getOrder()`](Piwik/Settings/SystemSetting.md#getOrder) &mdash; _Method in class_ [`SystemSetting`](Piwik/Settings/SystemSetting.md)
+- [`getOrder()`](Piwik/Settings/UserSetting.md#getOrder) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
 - [`getInstance()`](Piwik/Singleton.md#getInstance) &mdash; _Method in class_ [`Singleton`](Piwik/Singleton.md)
 - [`getName()`](Piwik/Site.md#getName) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`getMainUrl()`](Piwik/Site.md#getMainUrl) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
