updated plugins API documentation

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -64,6 +64,7 @@ This is a complete list of available classes:
 - [`Piwik\Plugin\Controller`](Piwik/Plugin/Controller.md) &mdash; Base class of all plugin Controllers.
 - [`Piwik\Plugin\ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md) &mdash; Base class of plugin controllers that provide administrative functionality.
 - [`Piwik\Plugin\Manager`](Piwik/Plugin/Manager.md) &mdash; The singleton that manages plugin loading/unloading and installation/uninstallation.
+- [`Piwik\Plugin\Settings`](Piwik/Plugin/Settings.md) &mdash; Settings class that plugins can extend in order to create settings for their plugins.
 - [`Piwik\Plugin\ViewDataTable`](Piwik/Plugin/ViewDataTable.md) &mdash; This class is used to load (from the API) and customize the output of a given DataTable.
 - [`Piwik\Plugin\Visualization`](Piwik/Plugin/Visualization.md) &mdash; Base class for all DataTable visualizations.
 - [`Piwik\Plugins\API\Controller`](Piwik/Plugins/API/Controller.md)
