--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -385,6 +385,10 @@ Index
 - [`getThemeEnabled()`](Piwik/Plugin/Manager.md#getThemeEnabled) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
 - [`getInstalledPluginsName()`](Piwik/Plugin/Manager.md#getInstalledPluginsName) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
 - [`getMissingPlugins()`](Piwik/Plugin/Manager.md#getMissingPlugins) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
+- [`getIntroduction()`](Piwik/Plugin/Settings.md#getIntroduction) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
+- [`getSettingsForCurrentUser()`](Piwik/Plugin/Settings.md#getSettingsForCurrentUser) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
+- [`getSettings()`](Piwik/Plugin/Settings.md#getSettings) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
+- [`getSettingValue()`](Piwik/Plugin/Settings.md#getSettingValue) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
 - [`getDefaultConfig()`](Piwik/Plugin/ViewDataTable.md#getDefaultConfig) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`getDefaultRequestConfig()`](Piwik/Plugin/ViewDataTable.md#getDefaultRequestConfig) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`getViewDataTableId()`](Piwik/Plugin/ViewDataTable.md#getViewDataTableId) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
@@ -607,6 +611,8 @@ Index
 - [`redirectToModule()`](Piwik/Piwik.md#redirectToModule) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`redirectToIndex()`](Piwik/Plugin/Controller.md#redirectToIndex) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`returnLoadedPluginsInfo()`](Piwik/Plugin/Manager.md#returnLoadedPluginsInfo) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
+- [`removeAllPluginSettings()`](Piwik/Plugin/Settings.md#removeAllPluginSettings) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
+- [`removeSettingValue()`](Piwik/Plugin/Settings.md#removeSettingValue) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
 - [`$requestConfig()`](Piwik/Plugin/ViewDataTable.md#$requestConfig) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`render()`](Piwik/Plugin/ViewDataTable.md#render) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`RankingQuery`](Piwik/RankingQuery.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
@@ -666,6 +672,9 @@ Index
 - [`setHostValidationVariablesView()`](Piwik/Plugin/Controller.md#setHostValidationVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`setPeriodVariablesView()`](Piwik/Plugin/Controller.md#setPeriodVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`setBasicVariablesAdminView()`](Piwik/Plugin/ControllerAdmin.md#setBasicVariablesAdminView) &mdash; _Method in class_ [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md)
+- [`Settings`](Piwik/Plugin/Settings.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
+- [`save()`](Piwik/Plugin/Settings.md#save) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
+- [`setSettingValue()`](Piwik/Plugin/Settings.md#setSettingValue) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
 - [`setDataTable()`](Piwik/Plugin/ViewDataTable.md#setDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`setLimit()`](Piwik/RankingQuery.md#setLimit) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
 - [`setOthersLabel()`](Piwik/RankingQuery.md#setOthersLabel) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
@@ -780,6 +789,7 @@ Index
 - [`__construct()`](Piwik/Plugin.md#__construct) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`__construct()`](Piwik/Plugin/Archiver.md#__construct) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
 - [`__construct()`](Piwik/Plugin/Controller.md#__construct) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
+- [`__construct()`](Piwik/Plugin/Settings.md#__construct) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
 - [`__construct()`](Piwik/Plugin/ViewDataTable.md#__construct) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`__construct()`](Piwik/Plugin/Visualization.md#__construct) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
 - [`__construct()`](Piwik/RankingQuery.md#__construct) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
