updated plugins API documentation

--- a/docs/master/1. Namespaces.md
+++ b/docs/master/1. Namespaces.md
@@ -58,4 +58,5 @@ This is a complete list of available namespaces:
 - [`Piwik\Plugins\Widgetize`](Piwik/Plugins/Widgetize)
 - [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 - [`Piwik\Settings`](Piwik/Settings)
+- [`Piwik\Tracker`](Piwik/Tracker)
 - [`Piwik\ViewDataTable`](Piwik/ViewDataTable)
