--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -74,6 +74,7 @@ Index
 - [`afterAllFilteresAreApplied()`](Piwik/Plugin/Visualization.md#afterAllFilteresAreApplied) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
 - [`addLabelColumn()`](Piwik/RankingQuery.md#addLabelColumn) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
 - [`addColumn()`](Piwik/RankingQuery.md#addColumn) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
+- [`authenticateSuperUserOrAdmin()`](Piwik/Tracker/Request.md#authenticateSuperUserOrAdmin) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
 - [`addForm()`](Piwik/View.md#addForm) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`assign()`](Piwik/View.md#assign) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`add()`](Piwik/WidgetsList.md#add) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)
@@ -434,6 +435,24 @@ Index
 - [`getExcludedIpsFor()`](Piwik/Site.md#getExcludedIpsFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`getExcludedQueryParametersFor()`](Piwik/Site.md#getExcludedQueryParametersFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`getScheduledTimeForMethod()`](Piwik/TaskScheduler.md#getScheduledTimeForMethod) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
+- [`getDaysSinceFirstVisit()`](Piwik/Tracker/Request.md#getDaysSinceFirstVisit) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getDaysSinceLastOrder()`](Piwik/Tracker/Request.md#getDaysSinceLastOrder) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getDaysSinceLastVisit()`](Piwik/Tracker/Request.md#getDaysSinceLastVisit) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getVisitCount()`](Piwik/Tracker/Request.md#getVisitCount) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getBrowserLanguage()`](Piwik/Tracker/Request.md#getBrowserLanguage) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getLocalTime()`](Piwik/Tracker/Request.md#getLocalTime) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getGoalRevenue()`](Piwik/Tracker/Request.md#getGoalRevenue) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getParam()`](Piwik/Tracker/Request.md#getParam) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getCurrentTimestamp()`](Piwik/Tracker/Request.md#getCurrentTimestamp) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getIdSite()`](Piwik/Tracker/Request.md#getIdSite) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getUserAgent()`](Piwik/Tracker/Request.md#getUserAgent) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getCustomVariables()`](Piwik/Tracker/Request.md#getCustomVariables) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getVisitorId()`](Piwik/Tracker/Request.md#getVisitorId) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getIp()`](Piwik/Tracker/Request.md#getIp) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getForcedVisitorId()`](Piwik/Tracker/Request.md#getForcedVisitorId) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getPlugins()`](Piwik/Tracker/Request.md#getPlugins) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getParamsCount()`](Piwik/Tracker/Request.md#getParamsCount) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`getPageGenerationTime()`](Piwik/Tracker/Request.md#getPageGenerationTime) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
 - [`getCurrentUrl()`](Piwik/Url.md#getCurrentUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getCurrentUrlWithoutQueryString()`](Piwik/Url.md#getCurrentUrlWithoutQueryString) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getCurrentUrlWithoutFileName()`](Piwik/Url.md#getCurrentUrlWithoutFileName) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
@@ -510,6 +529,7 @@ Index
 - [`isEcommerceEnabledFor()`](Piwik/Site.md#isEcommerceEnabledFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`isSiteSearchEnabledFor()`](Piwik/Site.md#isSiteSearchEnabledFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`isTaskBeingExecuted()`](Piwik/TaskScheduler.md#isTaskBeingExecuted) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
+- [`isAuthenticated()`](Piwik/Tracker/Request.md#isAuthenticated) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
 - [`isLocalUrl()`](Piwik/Url.md#isLocalUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`isDefined()`](Piwik/WidgetsList.md#isDefined) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)
 
@@ -566,6 +586,7 @@ Index
 - [`optimizeTables()`](Piwik/Db.md#optimizeTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`Option`](Piwik/Option.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`$objectInstance()`](Piwik/ScheduledTask.md#$objectInstance) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
+- [`overrideLocation()`](Piwik/Tracker/Request.md#overrideLocation) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
 
 ### P
 
@@ -618,6 +639,7 @@ Index
 - [`RankingQuery`](Piwik/RankingQuery.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`removeAllUserSettingsForUser()`](Piwik/Settings/UserSetting.md#removeAllUserSettingsForUser) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
 - [`runTasks()`](Piwik/TaskScheduler.md#runTasks) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
+- [`Request`](Piwik/Tracker/Request.md) &mdash; _Class in namespace_ [`Piwik\Tracker`](Piwik/Tracker)
 - [`redirectToReferrer()`](Piwik/Url.md#redirectToReferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`redirectToUrl()`](Piwik/Url.md#redirectToUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`render()`](Piwik/View.md#render) &mdash; _Method in class_ [`View`](Piwik/View.md)
@@ -697,6 +719,10 @@ Index
 - [`Site`](Piwik/Site.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`setSites()`](Piwik/Site.md#setSites) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`setSitesFromArray()`](Piwik/Site.md#setSitesFromArray) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
+- [`setThirdPartyCookie()`](Piwik/Tracker/Request.md#setThirdPartyCookie) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`setForceIp()`](Piwik/Tracker/Request.md#setForceIp) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`setForceDateTime()`](Piwik/Tracker/Request.md#setForceDateTime) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
+- [`setForcedVisitorId()`](Piwik/Tracker/Request.md#setForcedVisitorId) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
 - [`setContentType()`](Piwik/View.md#setContentType) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`setXFrameOptions()`](Piwik/View.md#setXFrameOptions) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`singleReport()`](Piwik/View.md#singleReport) &mdash; _Method in class_ [`View`](Piwik/View.md)
@@ -710,6 +736,7 @@ Index
 - [`translate()`](Piwik/Piwik.md#translate) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`translateException()`](Piwik/Piwik.md#translateException) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`TaskScheduler`](Piwik/TaskScheduler.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`truncateCustomVariable()`](Piwik/Tracker/Request.md#truncateCustomVariable) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
 
 ### U
 
@@ -799,6 +826,7 @@ Index
 - [`__construct()`](Piwik/Settings/UserSetting.md#__construct) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
 - [`__construct()`](Piwik/Site.md#__construct) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`__toString()`](Piwik/Site.md#__toString) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
+- [`__construct()`](Piwik/Tracker/Request.md#__construct) &mdash; _Method in class_ [`Request`](Piwik/Tracker/Request.md)
 - [`__construct()`](Piwik/View.md#__construct) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`__set()`](Piwik/View.md#__set) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`__get()`](Piwik/View.md#__get) &mdash; _Method in class_ [`View`](Piwik/View.md)
