--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -124,6 +124,7 @@ This is a complete list of available classes:
 - [`Piwik\Singleton`](Piwik/Singleton.md) &mdash; The singleton class restricts the instantiation of a class to one object only.
 - [`Piwik\Site`](Piwik/Site.md) &mdash; Provides access to individual site data (such as name, URL, etc.).
 - [`Piwik\TaskScheduler`](Piwik/TaskScheduler.md) &mdash; Manages scheduled task execution.
+- [`Piwik\Tracker\Request`](Piwik/Tracker/Request.md) &mdash; Piwik - Open source web analytics
 - [`Piwik\Url`](Piwik/Url.md) &mdash; Provides URL related helper methods.
 - [`Piwik\UrlHelper`](Piwik/UrlHelper.md) &mdash; Contains less commonly needed URL helper methods.
 - [`Piwik\Version`](Piwik/Version.md) &mdash; Piwik version information.
